Updating menu/footer files and fixing links

--- a/public/gcintranet/ajax/sitemenu-fra.html
+++ b/public/gcintranet/ajax/sitemenu-fra.html
@@ -2,8 +2,11 @@
 <html lang="fr">
 <!-- Le contenu de ce fichier est extrait de https://intranet.canada.ca/wet/sitemenu-fra.html -->
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
-wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html --><!-- DataAjaxFragmentStart --><!-- secondary navigation if enabled --><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8"></head><body><div class="pnl-strt container nvbar">
+wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html --> 
+<!-- DataAjaxFragmentStart --> 
+<!-- secondary navigation if enabled -->
+
+<div class="pnl-strt container nvbar">
   <h2 class="wb-inv">Menu des sujets</h2>
   <div class="row"> 
     <!-- MAKE SURE ANY UPDATES TO THE TOP LEVEL OF THIS MENU ARE REFLECTED IN THE FILES sitemenunavbar-lang.asp -->
@@ -13,9 +16,9 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           <li><a href="https://intranet.canada.ca/psc-fsc/messages/index-fra.asp" class="menuNOnclick-eng">Messages aux employés</a></li>
           <li><a href="https://intranet.canada.ca/psc-fsc/gwi-ipg/index-fra.asp" class="menuNOnclick-eng">Initiatives pangouvernementales</a></li>
           <li><a href="https://intranet.canada.ca/psc-fsc/aw-pr/index-fra.asp" class="menuNOnclick-eng">Prix et reconnaissance des employés</a></li>
-          <li><a href="https://intranet.canada.ca/psc-fsc/nb-cb-fra.asp" class="menuNOnclick-eng">Communiqués et bulletins d’information</a></li>
+          <li><a href="https://intranet.canada.ca/psc-fsc/nb-cb-fra.asp" class="menuNOnclick-eng">Communiqués et bulletins d&#8217;information</a></li>
        <!--   <li><a href="https://www.canada.ca/fr/secretariat-conseil-tresor/site/fiers-servir.html" class="menuNOnclick-eng">Fiers de servir les Canadiennes et les Canadiens</a></li>
-          <li><a href="/psc-fsc/hps-vfp/index-fra.asp" class="menuNOnclick-eng">Les visages de la fonction publique</a></li>-->
+          <li><a href="https://intranet.canada.ca/psc-fsc/hps-vfp/index-fra.asp" class="menuNOnclick-eng">Les visages de la fonction publique</a></li>-->
           <li><a href="https://intranet.canada.ca/psc-fsc/blogs-blogues-fra.asp" class="menuNOnclick-eng">Blogues</a></li>
           <li class="slflnk"><a href="https://intranet.canada.ca/psc-fsc/index-fra.asp" class="menuNOnclick-fra">Nouvelles – Autre</a></li>
         </ul>
@@ -36,12 +39,12 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <ul class="sm list-unstyled" id="mnuCarriere" role="menu">
           <li><a href="https://intranet.canada.ca/cdl-dca/fj-te/index-fra.asp" class="menuCDLOnclick-fra">Trouver un emploi</a></li>
   <li><a href="https://learn-apprendre.csps-efpc.gc.ca/application/fr" class="menuCDLOnclick-fra">GCcampus</a></li>
-  <li><a href="http://www.csps-efpc.gc.ca/pso-fra.aspx" class="menuCDLOnclick-fra">Orientation à la fonction publique</a></li>
-  <li><a href="http://www.csps-efpc.gc.ca/index-fra.aspx" class="menuCDLOnclick-fra">Événements d’apprentissage</a></li>
+  <li><a href="https://www.csps-efpc.gc.ca/pso-fra.aspx" class="menuCDLOnclick-fra">Orientation à la fonction publique</a></li>
+  <li><a href="https://www.csps-efpc.gc.ca/index-fra.aspx" class="menuCDLOnclick-fra">Événements d&rsquo;apprentissage</a></li>
   <li><a href="https://intranet.canada.ca/cdl-dca/pd-pp/index-fra.asp" class="menuCDLOnclick-fra">Perfectionnement professionnel</a></li>
   <li><a href="https://intranet.canada.ca/cdl-dca/psc-cfp/index-fra.asp" class="menuCDLOnclick-fra">Collectivités</a></li>
   <li><a href="https://intranet.canada.ca/cdl-dca/slte-fels/index-fra.asp" class="menuCDLOnclick-fra">Formation et évaluation de langue seconde</a></li>
-  <li><a href="http://www.forces.gc.ca/fr/education-formation.page" class="menuCDLOnclick-fra">Éducation et formation des militaires</a></li>
+  <li><a href="https://www.forces.gc.ca/fr/education-formation.page" class="menuCDLOnclick-fra">Éducation et formation des militaires</a></li>
   <li><a href="https://intranet.canada.ca/cdl-dca/cpie-ccea/index-fra.asp" class="menuCDLOnclick-fra">Cheminements de carrière pour les employés autochtones</a></li>
   <li><a href="https://www.csps-efpc.gc.ca/tools/jobaids/virtual-team-toolkit-fra.aspx" class="menuCDLOnclick-fra">Trousse d'outils pour les équipes virtuelles</a></li>
   <li><a href="https://wiki.gccollab.ca/M365/Accueil" class="menuCDLOnclick-fra">Ressources de formation pour Microsoft (M365)</a></li>
@@ -57,7 +60,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           <li><a href="https://intranet.canada.ca/wg-tg/bsgs-avbs-fra.asp" class="menuSTOnclick-fra">Approvisionnement, surplus et paiements</a></li>
           <li><a href="https://intranet.canada.ca/wg-tg/gc-cg/index-fra.asp" class="menuSTOnclick-fra">Communications du gouvernement</a></li>
           <li><a href="https://intranet.canada.ca/wg-tg/go-sg/index-fra.asp" class="menuSTOnclick-fra">Surveillance du gouvernement</a></li>
-          <li><a href="https://intranet.canada.ca/wg-tg/imt-git-fra.asp" class="menuSTOnclick-fra">Gestion de l’information et des technologies</a></li>
+          <li><a href="https://intranet.canada.ca/wg-tg/imt-git-fra.asp" class="menuSTOnclick-fra">Gestion de l&#8217;information et des technologies</a></li>
           <li><a href="https://intranet.canada.ca/wg-tg/bo-bi/index-fra.asp" class="menuSTOnclick-fra">Bureaux, immeubles et véhicules</a></li>
           <li><a href="https://intranet.canada.ca/wg-tg/l-b-fra.asp" class="menuSTOnclick-fra">Bibliothèques</a></li>
           <li class="slflnk"><a href="https://intranet.canada.ca/wg-tg/index-fra.asp" class="menuSTOnclick-fra">Services et outils – Autre</a></li>
@@ -65,14 +68,14 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       </li>
       <li class="hidden-md hidden-lg"><a href="#mnuTools" class="item">OutilsGC</a>
         <ul class="sm list-unstyled" id="mnuTools" role="menu">
-          <li> <a href="https://gcconnex.gc.ca/" class="GCTBannerOnclick" onclick="agf.pageview({page:'/vt/external/gcconnex.gc.ca/index-fra.asp', title:'GCTools Banner-fr: GCconnex'})"> <span class="bold-gc">GC</span>connex</a> </li>
-          <li> <a href="http://www.gcpedia.gc.ca/wiki/?setlang=fr" class="GCTBannerOnclick" onclick="agf.pageview({page:'/vt/external/gcpedia.gc.ca/index-eng.asp', title:'GCTools Banner-fr: GCpedia'})"> <span class="bold-gc">GC</span>pédia</a> </li>
-          <li> <a href="http://gcannuaire-gcdirectory.gc.ca/fr/GCA/?pgid=002" class="GCTBannerOnclick" onclick="agf.pageview({page:'/vt/external/gcdirectory.gc.ca/index-eng.asp', title:'GCTools Banner-fr: GCdirectory'})"> <span class="bold-gc">GC</span>annuaire</a> </li>
-          <li> <a href="https://gccollab.ca/splash/" class="GCTBannerOnclick" onclick="agf.pageview({page:'/vt/external/gccollab.ca/splash/', title:'GCTools Banner-fr: GCcollab'})"> <span class="bold-gc">GC</span>collab</a> </li>
+          <li> <a href="https://gcconnex.gc.ca" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gcconnex.gc.ca/index-fra.asp', title:'GCTools Banner-fr: GCconnex'})"> <span class="bold-gc">GC</span>connex</span></a> </li>
+          <li> <a href="http://www.gcpedia.gc.ca/wiki/?setlang=fr" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gcpedia.gc.ca/index-eng.asp', title:'GCTools Banner-fr: GCpedia'})"> <span class="bold-gc">GC</span>pédia</span></a> </li>
+          <li> <a href="https://gcannuaire-gcdirectory.gc.ca/fr/GCA/?pgid=002" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gcdirectory.gc.ca/index-eng.asp', title:'GCTools Banner-fr: GCdirectory'})"> <span class="bold-gc">GC</span>annuaire</span></a> </li>
+          <li> <a href="https://gccollab.ca/splash/" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gccollab.ca/splash/', title:'GCTools Banner-fr: GCcollab'})"> <span class="bold-gc">GC</span>collab</span></a> </li>
         </ul>
       </li>
     </ul>
   </div>
 </div>
 <!-- DataAjaxFragmentEnd -->
-</body></html>
+</html>
