--- a/public/global/esdcfooter-eng.html
+++ b/public/global/esdcfooter-eng.html
@@ -1,7 +1,5 @@
-<html>
 <!-- The contents of this file are retrieved from https://esdc.prv/_conf/assets/en/footer/esdcfooter-eng.html -->
-<head>
-<meta http-equiv="content-type" content="text/html; charset=windows-1252"></head><body><h2 class="wb-inv">About this site</h2>
+<h2 class="wb-inv">About this site</h2>
 <div class="row">
   <section class="col-sm-3">
     <h3>About us</h3>
@@ -30,7 +28,7 @@
   <div class="col-sm-3 col-lg-3 brdr-lft">
     <section>
       <h3>Feedback</h3>
-      <p><a href="https://edsc.prv/en/feedback/index.shtml"><img src="esdcfooter-eng_files/feedback.png" alt="Feedback about this Web site"></a></p>
+      <p><a href="https://edsc.prv/en/feedback/index.shtml"><img src="https://templates.service.gc.ca/rn/cls/wet/gcintranet/assets/feedback.png" alt="Feedback about this Web site"></a></p>
     </section>
   </div>
-</div></body></html>
+</div>
