--- a/public/global/esdcmenu-eng.html
+++ b/public/global/esdcmenu-eng.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- The contents of this file are retrieved from https://esdc.prv/_conf/assets/en/mega_menu/esdcmenu-eng.html -->
-<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
-wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html --><!-- DataAjaxFragmentStart --><!-- secondary navigation if enabled --><head>
-<meta http-equiv="content-type" content="text/html; charset=windows-1252"></head><body><div class="pnl-strt container nvbar">
+<!-- Web Experience Toolkit (WET) / Boï¿½te ï¿½ outils de l'expï¿½rience Web (BOEW)
+wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
+<!-- DataAjaxFragmentStart -->
+<!-- secondary navigation if enabled -->
+<div class="pnl-strt container nvbar">
   <h2 class="wb-inv">Topics menu</h2>
   <div class="row">
     <ul class="list-inline menu" role="menubar">
@@ -55,6 +57,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 				<!--<li role="presentation"><a href="https://esdc.prv/en/service-canada/tismb/index.shtml">Transformation and Integrated Service Management</a></li>-->
                 <!--li role="presentation"><a href="https://esdc.prv/en/service-canada/tmb/index.shtml">Transformation Management Branch</a></li-->
                 <!--<li role="presentation"><a href="http://dialogue/grp/smb-dggs/sitepages/home.aspx">Service Management</a></li>-->
+                <li role="presentation"><a href="https://esdc.prv/en/service-canada/tfwpd/index.shtml">Temporary Foreign Worker Program Branch</a></li>
                 <li role="presentation"><a href="https://esdc.prv/en/service-canada/atlantic/index.shtml">Atlantic</a></li>
                 <li role="presentation"><a href="https://esdc.prv/en/service-canada/quebec/index.shtml">Quebec</a></li>
                 <li role="presentation"><a href="https://esdc.prv/en/service-canada/ontario/index.shtml">Ontario</a></li>
@@ -112,14 +115,14 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                 <li role="presentation"><a href="http://crt-orc.prv/wppa.aspx">Common Reference Tool</a></li>
                 <li role="presentation"><a href="https://csgc-scsc.service.gc.ca/p/p0100/p0000.aspx?lang=eng">Common System for Grants and Contributions</a></li>
                 <li role="presentation"><a href="https://dialogue.spprod.service.gc.ca/grp/ops-prl-brt/SitePages/default.aspx">CPP and OAS Electronic Reference Library</a></li>
-                <li role="presentation"><a href="http://ort.prv/en/site/home/home.html">EI Online Reference Tool</a></li>
+                <li role="presentation"><a href="https://ort-orl.esdc-edsc.canada.ca/en/site/home/home.shtml">EI Online Reference Tool</a></li>
                 <li role="presentation"><a href="https://esdc.prv/en/service-canada/ei/index.shtml">Employment Insurance</a></li>
-                <li role="presentation"><a href="http://impact.prv/default.aspx">IMPACT</a></li>
+                <li role="presentation"><a href="https://impact.prv/default.aspx">IMPACT</a></li>
 				<li role="presentation"><a href="https://kmt-ogc.service.gc.ca/en/">Knowledge Management Tool for Pensions<!--(CPP)--></a></li>
                 <li role="presentation"><a href="http://offices-bureaux.prv/FSCO-TBSC/">Office Profiles</a></li>
                 <li role="presentation"><a href="https://dialogue.spprod.service.gc.ca/grp/BU6975203">Protected B Mail Tracking Tool</a></li>
                 <li role="presentation"><a href="https://esdc.prv/en/service-canada/service-delivery/index.shtml">Service Delivery Community</a></li>
-                <li role="presentation"><a href="https://oas-sv-prodcc.bdm-mvp.az.esdc-edsc.cloud-nuage.gc.ca/Curam/logon.jsp">ESDC's Cúram Social Program Management</a></li>
+                <li role="presentation"><a href="https://oas-sv-prodcc.bdm-mvp.az.esdc-edsc.cloud-nuage.gc.ca/Curam/logon.jsp">ESDC's Cï¿½ram Social Program Management</a></li>
               </ul>
             </details>
 			</li>
@@ -146,12 +149,12 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           <li role="presentation"><a href="http://forms-formulaires.prv/lc/content/EForms/en/Index.html">E-Forms</a></li>
 		  <li role="presentation"><a href="https://iservice.prv/eng/is/security/emergency_continuity/index.shtml">Emergency Management and Business Continuity</a></li>
           <li role="presentation"><a href="https://iservice.prv/eng/ombuds/index.shtml">ESDC Ombuds Office</a></li> 
-          <li role="presentation"><a href="http://hrsc-csrh.prv/webforms/Home.aspx">Human Resources Service Centre</a></li>
+          <li role="presentation"><a href="http://hrsc-csrh.prv/webforms/Home.aspx ">Human Resources Service Centre</a></li>
           <li role="presentation"><a href="https://www.canada.ca/en/services/jobs/opportunities/government.html">Job opportunities</a></li>
-          <li role="presentation"><a href="https://esdc.prv/en/department/dm/tina-namiesniowski/index.shtml">Manager’s Corner</a></li>
+          <li role="presentation"><a href="https://esdc.prv/en/department/dm/tina-namiesniowski/index.shtml">Managerï¿½s Corner</a></li>
           <li role="presentation"><a href="https://iservice.prv/eng/esrp/erp_ps/index.shtml">myEMS (PeopleSoft)</a></li>
           <li role="presentation"><a href="https://mapayegc-mygcpay.tpsgc-pwgsc.gc.ca/en">MyGCPay</a></li>
-          <li role="presentation"><a href="http://nscc-cnas.pwgsc-tpsgc.gc.ca/index-eng.cfm">National Service Call Centre</a></li>
+          <li role="presentation"><a href="https://nscc-cnas.pwgsc-tpsgc.gc.ca/index-eng.cfm">National Service Call Centre</a></li>
           <li role="presentation"><a href="https://iservice.prv/eng/imit/nsd/index.shtml">National Service Desk</a></li>
           <li role="presentation"><a href="https://iservice.prv/eng/imit/catalogue/software_application/microsoft365/index.shtml">Microsoft 365 Products </a></li>
           <li role="presentation"><a href="https://portal-portail.tbs-sct.gc.ca/home-eng.aspx">Performance management application</a></li>
@@ -163,4 +166,4 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
   </div>
 </div>
 <!-- DataAjaxFragmentEnd -->
-  </body></html>
+  </html>
