--- a/public/gcintranet/ajax/sitemenu-eng.html
+++ b/public/gcintranet/ajax/sitemenu-eng.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <!-- The contents of this file are retrieved from https://intranet.canada.ca/wet/sitemenu-eng.html -->
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
-wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html --><!-- DataAjaxFragmentStart --><!-- secondary navigation if enabled --><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8"></head><body><div class="pnl-strt container nvbar">
+wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
+<!-- DataAjaxFragmentStart -->
+<!-- secondary navigation if enabled -->
+
+<div class="pnl-strt container nvbar">
   <h2 class="wb-inv">Topics menu</h2>
   <div class="row"> 
     <!-- MAKE SURE ANY UPDATES TO THE TOP LEVEL OF THIS MENU ARE REFLECTED IN THE FILES sitemenunavbar-lang.asp -->
@@ -15,7 +18,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           <li><a href="https://intranet.canada.ca/psc-fsc/aw-pr/index-eng.asp" class="menuNOnclick-eng">Awards and recognition</a></li>
           <li><a href="https://intranet.canada.ca/psc-fsc/nb-cb-eng.asp" class="menuNOnclick-eng">Newsletters and bulletins</a></li>
 <!--          <li><a href="https://www.canada.ca/en/treasury-board-secretariat/site/proudly-serving.html" class="menuNOnclick-eng">Proudly serving Canadians</a></li>
-          <li><a href="/psc-fsc/hps-vfp/index-eng.asp" class="menuNOnclick-eng">Humans of the Public Service</a></li>-->
+          <li><a href="https://intranet.canada.ca/psc-fsc/hps-vfp/index-eng.asp" class="menuNOnclick-eng">Humans of the Public Service</a></li>-->
           <li><a href="https://intranet.canada.ca/psc-fsc/blogs-blogues-eng.asp" class="menuNOnclick-eng">Blogs</a></li>
           <li class="slflnk"><a href="https://intranet.canada.ca/psc-fsc/index-eng.asp" class="menuNOnclick-eng">News – More</a></li>
         </ul>
@@ -36,12 +39,12 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <ul class="sm list-unstyled" id="mnuCareer" role="menu">
           <li><a href="https://intranet.canada.ca/cdl-dca/fj-te/index-eng.asp" class="menuCDLOnclick-eng">Find a job</a></li>
           <li><a href="https://learn-apprendre.csps-efpc.gc.ca/application/en" class="menuCDLOnclick-eng">GCcampus</a></li>
-          <li><a href="http://www.csps-efpc.gc.ca/pso-eng.aspx" class="menuCDLOnclick-eng">Public service orientation</a></li>
-          <li><a href="http://www.csps-efpc.gc.ca/events/index-eng.aspx" class="menuCDLOnclick-eng">Learning events</a></li>
+          <li><a href="https://www.csps-efpc.gc.ca/pso-eng.aspx" class="menuCDLOnclick-eng">Public service orientation</a></li>
+          <li><a href="https://www.csps-efpc.gc.ca/events/index-eng.aspx" class="menuCDLOnclick-eng">Learning events</a></li>
           <li><a href="https://intranet.canada.ca/cdl-dca/pd-pp/index-eng.asp" class="menuCDLOnclick-eng">Professional development</a></li>
           <li><a href="https://intranet.canada.ca/cdl-dca/psc-cfp/index-eng.asp" class="menuCDLOnclick-eng">Communities</a></li>
           <li><a href="https://intranet.canada.ca/cdl-dca/slte-fels/index-eng.asp" class="menuCDLOnclick-eng">Second language training and evaluation</a></li>
-          <li><a href="http://www.forces.gc.ca/en/education-training.page" class="menuCDLOnclick-eng">Military education and training</a></li>
+          <li><a href="https://www.forces.gc.ca/en/education-training.page" class="menuCDLOnclick-eng">Military education and training</a></li>
           <li><a href="https://intranet.canada.ca/cdl-dca/cpie-ccea/index-eng.asp" class="menuCDLOnclick-eng">Career Pathways Initiative for Indigenous Employees</a></li>
           <li><a href="https://www.csps-efpc.gc.ca/tools/jobaids/virtual-team-toolkit-eng.aspx" class="menuCDLOnclick-eng">Virtual team toolkit</a></li>
           <li><a href="https://wiki.gccollab.ca/M365/Home" class="menuCDLOnclick-eng">Microsoft (M365) training resources</a></li>
@@ -65,14 +68,14 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       </li>
       <li class="hidden-md hidden-lg"><a href="#mnuTools" class="item">GCTools</a>
         <ul class="sm list-unstyled" id="mnuTools" role="menu">
-          <li> <a href="https://gcconnex.gc.ca/" class="GCTBannerOnclick" onclick="agf.pageview({page:'/vt/external/gcconnex.gc.ca/index-eng.asp', title:'GCTools Banner-en: GCconnex'})"> <span class="bold-gc">GC</span>connex</a> </li>
-          <li> <a href="http://www.gcpedia.gc.ca/wiki/?setlang=en" class="GCTBannerOnclick" onclick="agf.pageview({page:'/vt/external/gcpedia.gc.ca/index-eng.asp', title:'GCTools Banner-en: GCpedia'})"> <span class="bold-gc">GC</span>pedia</a> </li>
-          <li> <a href="http://gcdirectory-gcannuaire.gc.ca/en/GCD/?pgid=002" class="GCTBannerOnclick" onclick="agf.pageview({page:'/vt/external/gcdirectory.gc.ca/index-eng.asp', title:'GCTools Banner-en: GCdirectory'})"> <span class="bold-gc">GC</span>directory</a> </li>
-          <li> <a href="https://gccollab.ca/splash/" class="GCTBannerOnclick" onclick="agf.pageview({page:'/vt/external/gccollab.ca/splash/', title:'GCTools Banner-en: GCcollab'})"> <span class="bold-gc">GC</span>collab</a> </li>
+          <li> <a href="https://gcconnex.gc.ca" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gcconnex.gc.ca/index-eng.asp', title:'GCTools Banner-en: GCconnex'})"> <span class="bold-gc">GC</span>connex</span></a> </li>
+          <li> <a href="http://www.gcpedia.gc.ca/wiki/?setlang=en" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gcpedia.gc.ca/index-eng.asp', title:'GCTools Banner-en: GCpedia'})"> <span class="bold-gc">GC</span>pedia</span></a> </li>
+          <li> <a href="http://gcdirectory-gcannuaire.gc.ca/en/GCD/?pgid=002" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gcdirectory.gc.ca/index-eng.asp', title:'GCTools Banner-en: GCdirectory'})"> <span class="bold-gc">GC</span>directory</span></a> </li>
+          <li> <a href="https://gccollab.ca/splash/" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gccollab.ca/splash/', title:'GCTools Banner-en: GCcollab'})"> <span class="bold-gc">GC</span>collab</span></a> </li>
         </ul>
       </li>
     </ul>
   </div>
 </div>
 <!-- DataAjaxFragmentEnd -->
-</body></html>
+</html>
