--- a/public/global/esdcfooter-fra.html
+++ b/public/global/esdcfooter-fra.html
@@ -1,7 +1,5 @@
-<html>
 <!-- Le contenu de ce fichier est extrait de https://esdc.prv/_conf/assets/fr/footer/esdcfooter-fra.html -->
-<head>
-<meta http-equiv="content-type" content="text/html; charset=windows-1252"></head><body><h2 class="wb-inv">À propos de ce site</h2>
+<h2 class="wb-inv">À propos de ce site</h2>
 <div class="row">
   <section class="col-sm-3">
     <h3>À propos</h3>
@@ -30,7 +28,7 @@
   <div class="col-sm-3 col-lg-3 brdr-lft">
     <section>
       <h3>Rétroaction</h3>
-      <p><a href="https://edsc.prv/fr/retroaction/index.shtml"><img src="esdcfooter-fra_files/feedback.png" alt="Rétroaction sur ce site Web"></a></p>
+      <p><a href="https://edsc.prv/fr/retroaction/index.shtml"><img src="https://templates.service.gc.ca/rn/cls/wet/gcintranet/assets/feedback.png" alt="Rétroaction sur ce site Web"></a></p>
     </section>
   </div>
-</div></body></html>
+</div>
