Updating intranet menu and footer files (#1036)
* Updating intranet menu and footer files

* Fixing french characters

* Fixing spelling

* Fixing apostrophe

* Updating sitemenu-eng

* Updating menu/footer files and fixing links

* Fixing accents

* Fixing encoding

--- a/public/gcintranet/ajax/sitemenu-fra.html
+++ b/public/gcintranet/ajax/sitemenu-fra.html
@@ -1,77 +1,81 @@
 <!DOCTYPE html>
 <html lang="fr">
+<!-- Le contenu de ce fichier est extrait de https://intranet.canada.ca/wet/sitemenu-fra.html -->
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
-wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-<!-- DataAjaxFragmentStart -->
+wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html --> 
+<!-- DataAjaxFragmentStart --> 
 <!-- secondary navigation if enabled -->
 
 <div class="pnl-strt container nvbar">
-	<h2 class="wb-inv">Menu des sujets</h2>
-	<div class="row">
-		<!-- MAKE SURE ANY UPDATES TO THE TOP LEVEL OF THIS MENU ARE REFLECTED IN THE FILES sitemenunavbar-lang.asp -->
-		<ul class="list-inline menu" role="menubar">
-			<li><a href="#mnuNouvelles" class="item">Nouvelles</a>
-				<ul class="sm list-unstyled" id="mnuNouvelles" role="menu">
-					<li><a href="https://intranet.canada.ca/psc-fsc/messages/index-fra.asp">Messages aux employés</a></li>
-					<li><a href="https://intranet.canada.ca/psc-fsc/gwi-ipg/index-fra.asp">Initiatives pangouvernementales</a></li>
-					<li><a href="https://intranet.canada.ca/psc-fsc/index-fra.asp">Les visages de la fonction publique</a></li>
-					<li><a href="https://www.canada.ca/fr/secretariat-conseil-tresor/site/fiers-servir.html">Fiers de servir les Canadiennes et les Canadiens</a></li>
-					<li><a href="https://www.canada.ca/fr/nouvelles.html">GC Salle de Presse</a></li>
-					<li class="slflnk"><a href="https://intranet.canada.ca/psc-fsc/index-fra.asp">Nouvelles – Autre</a></li>
-				</ul>
-			</li>
-			<li><a href="#mnuRH" class="item">Ressources humaines</a>
-				<ul class="sm list-unstyled" id="mnuRH" role="menu">
-					<li><a href="https://intranet.canada.ca/ppb-rpa/index-fra.asp">Rémunération, pension et avantages sociaux</a></li>
-					<li><a href="https://intranet.canada.ca/hr-rh/ptm-grt/index-fra.asp">Gestion du rendement et des talents</a></li>
-					<li><a href="https://intranet.canada.ca/hr-rh/ve/index-fra.asp">Valeurs et éthique</a></li>
-					<li><a href="https://intranet.canada.ca/hr-rh/hw-ms/index-fra.asp">Milieu de travail sain</a></li>
-					<li><a href="https://intranet.canada.ca/hr-rh/pss-dfp/index-fra.asp">Dotation dans la fonction publique</a></li>
-					<li><a href="https://intranet.canada.ca/hr-rh/sbmv-sapm-fra.asp">Services et avantages sociaux du personnel militaire et des anciens combattants</a></li>
-					<li><a href="https://intranet.canada.ca/hr-rh/sbr-sag-fra.asp">Services et avantages sociaux pour les membres de la GRC</a></li>
-					<li class="slflnk"><a href="https://intranet.canada.ca/hr-rh/index-fra.asp">Ressources humaines – Autre</a></li>
-				</ul>
-			</li>
-			<li><a href="#mnuCarriere" class="item">Développement de carrière et apprentissage</a>
-				<ul class="sm list-unstyled" id="mnuCarriere" role="menu">
-					<li><a href="https://intranet.canada.ca/cdl-dca/fj-te/index-fra.asp">Trouver un emploi</a></li>
-					<li><a href="https://www.csps-efpc.gc.ca/pso-fra.aspx">Orientation à la fonction publique</a></li>
-					<li><a href="https://learn-apprendre.csps-efpc.gc.ca/application/fr">GCcampus</a></li>
-					<li><a href="https://www.csps-efpc.gc.ca/events/index-fra.aspx">Événements d&#8217;apprentissage</a></li>
-					<li><a href="https://intranet.canada.ca/cdl-dca/slte-fels/index-fra.asp">Formation et évaluation de langue seconde</a></li>
-					<li><a href="https://intranet.canada.ca/cdl-dca/psc-cfp/index-fra.asp">Collectivités</a></li>
-					<li><a href="https://intranet.canada.ca/cdl-dca/pd-pp/index-fra.asp">Perfectionnement professionnel</a></li>
-					<li><a href="https://www.forces.gc.ca/fr/education-formation.page">Éducation et formation des militaires</a></li>
-					<li class="slflnk"><a href="https://intranet.canada.ca/cdl-dca/index-fra.asp">Développement de carrière et apprentissage - Autre</a></li>
-				</ul>
-			</li>
-			<li><a href="#mnuServices" class="item">Services et outils</a>
-				<ul class="sm list-unstyled" id="mnuServices" role="menu">
-                <li><a href="https://intranet.canada.ca/wg-tg/gf-fg/index-fra.asp">Établissement de rapports sur les finances</a></li>
-                <li><a href="https://intranet.canada.ca/wg-tg/pdsg-pdnd/index-fra.asp">Politiques, directives, normes et lignes directrices</a></li>
-                <li><a href="https://intranet.canada.ca/wg-tg/gwa-awg-fra.asp">RéseauGC</a></li>
-                <li><a href="https://intranet.canada.ca/wg-tg/forms-formulaires-fra.asp">Formulaires</a></li>
-					<li><a href="https://intranet.canada.ca/wg-tg/bsgs-avbs-fra.asp">Approvisionnement, surplus et paiements</a></li>
-					<li><a href="https://intranet.canada.ca/wg-tg/gc-cg/index-fra.asp">Communications du gouvernement</a></li>
-                    <li><a href="https://intranet.canada.ca/wg-tg/go-sg/index-fra.asp">Surveillance du gouvernement</a></li>
-					<li><a href="https://intranet.canada.ca/wg-tg/imt-git-fra.asp">Gestion de l&#8217;information et des technologies</a></li>
-					<li><a href="https://intranet.canada.ca/wg-tg/bo-bi/index-fra.asp">Bureaux, immeubles et véhicules</a></li>
-					<li><a href="https://intranet.canada.ca/wg-tg/l-b-fra.asp">Bibliothèques</a></li>
-					<li class="slflnk"><a href="https://intranet.canada.ca/wg-tg/index-fra.asp">Services et outils – Autre</a></li>
-				</ul>
-			</li>
-
-			<li class="hidden-md hidden-lg"><a href="#mnuTools" class="item">OutilsGC</a>
-				<ul class="sm list-unstyled" id="mnuTools" role="menu">
-					<li><a href="https://gcconnex.gc.ca"><span class="bold-gc">GC</span>connex</a></li>
-					<li><a href="https://www.gcpedia.gc.ca/wiki/?setlang=fr"><span class="bold-gc">GC</span>pédia</a></li>
-					<li><a href="https://gcannuaire-gcdirectory.gc.ca/fr/GCA/?pgid=002"><span class="bold-gc">GC</span>annuaire</a></li>
-					<li><a href="https://gccollab.ca/splash/"><span class="bold-gc">GC</span>collab</a></li>
-				</ul>
-			</li>
-
-		</ul>
-	</div>
+  <h2 class="wb-inv">Menu des sujets</h2>
+  <div class="row"> 
+    <!-- MAKE SURE ANY UPDATES TO THE TOP LEVEL OF THIS MENU ARE REFLECTED IN THE FILES sitemenunavbar-lang.asp -->
+    <ul class="list-inline menu" role="menubar">
+      <li><a href="#mnuNouvelles" class="item">Nouvelles</a>
+        <ul class="sm list-unstyled" id="mnuNouvelles" role="menu">
+          <li><a href="https://intranet.canada.ca/psc-fsc/messages/index-fra.asp" class="menuNOnclick-eng">Messages aux employés</a></li>
+          <li><a href="https://intranet.canada.ca/psc-fsc/gwi-ipg/index-fra.asp" class="menuNOnclick-eng">Initiatives pangouvernementales</a></li>
+          <li><a href="https://intranet.canada.ca/psc-fsc/aw-pr/index-fra.asp" class="menuNOnclick-eng">Prix et reconnaissance des employés</a></li>
+          <li><a href="https://intranet.canada.ca/psc-fsc/nb-cb-fra.asp" class="menuNOnclick-eng">Communiqués et bulletins d&#8217;information</a></li>
+       <!--   <li><a href="https://www.canada.ca/fr/secretariat-conseil-tresor/site/fiers-servir.html" class="menuNOnclick-eng">Fiers de servir les Canadiennes et les Canadiens</a></li>
+          <li><a href="https://intranet.canada.ca/psc-fsc/hps-vfp/index-fra.asp" class="menuNOnclick-eng">Les visages de la fonction publique</a></li>-->
+          <li><a href="https://intranet.canada.ca/psc-fsc/blogs-blogues-fra.asp" class="menuNOnclick-eng">Blogues</a></li>
+          <li class="slflnk"><a href="https://intranet.canada.ca/psc-fsc/index-fra.asp" class="menuNOnclick-fra">Nouvelles – Autre</a></li>
+        </ul>
+      </li>
+      <li><a href="#mnuRH" class="item">Ressources humaines</a>
+        <ul class="sm list-unstyled" id="mnuRH" role="menu">
+          <li><a href="https://intranet.canada.ca/ppb-rpa/index-fra.asp" class="menuHROnclick-fra">Rémunération, pension et avantages sociaux</a></li>
+          <li><a href="https://intranet.canada.ca/hr-rh/ptm-grt/index-fra.asp" class="menuHROnclick-fra">Gestion du rendement et des talents</a></li>
+          <li><a href="https://intranet.canada.ca/hr-rh/ve/index-fra.asp" class="menuHROnclick-fra">Valeurs et éthique</a></li>
+          <li><a href="https://intranet.canada.ca/hr-rh/hw-ms/index-fra.asp" class="menuHROnclick-fra">Mieux-être, inclusion et diversité</a></li>
+          <li><a href="https://intranet.canada.ca/hr-rh/pss-dfp/index-fra.asp" class="menuHROnclick-fra">Dotation dans la fonction publique</a></li>
+          <li><a href="https://intranet.canada.ca/hr-rh/sbmv-sapm-fra.asp" class="menuHROnclick-fra">Services et avantages sociaux du personnel militaire et des anciens combattants</a></li>
+          <li><a href="https://intranet.canada.ca/hr-rh/sbr-sag-fra.asp" class="menuHROnclick-fra">Services et avantages sociaux pour les membres de la GRC</a></li>
+          <li class="slflnk"><a href="https://intranet.canada.ca/hr-rh/index-fra.asp" class="menuHROnclick-fra">Ressources humaines – Autre</a></li>
+        </ul>
+      </li>
+      <li><a href="#mnuCarriere" class="item">Développement de carrière et apprentissage</a>
+        <ul class="sm list-unstyled" id="mnuCarriere" role="menu">
+          <li><a href="https://intranet.canada.ca/cdl-dca/fj-te/index-fra.asp" class="menuCDLOnclick-fra">Trouver un emploi</a></li>
+  <li><a href="https://learn-apprendre.csps-efpc.gc.ca/application/fr" class="menuCDLOnclick-fra">GCcampus</a></li>
+  <li><a href="https://www.csps-efpc.gc.ca/pso-fra.aspx" class="menuCDLOnclick-fra">Orientation à la fonction publique</a></li>
+  <li><a href="https://www.csps-efpc.gc.ca/index-fra.aspx" class="menuCDLOnclick-fra">Événements d&rsquo;apprentissage</a></li>
+  <li><a href="https://intranet.canada.ca/cdl-dca/pd-pp/index-fra.asp" class="menuCDLOnclick-fra">Perfectionnement professionnel</a></li>
+  <li><a href="https://intranet.canada.ca/cdl-dca/psc-cfp/index-fra.asp" class="menuCDLOnclick-fra">Collectivités</a></li>
+  <li><a href="https://intranet.canada.ca/cdl-dca/slte-fels/index-fra.asp" class="menuCDLOnclick-fra">Formation et évaluation de langue seconde</a></li>
+  <li><a href="https://www.forces.gc.ca/fr/education-formation.page" class="menuCDLOnclick-fra">Éducation et formation des militaires</a></li>
+  <li><a href="https://intranet.canada.ca/cdl-dca/cpie-ccea/index-fra.asp" class="menuCDLOnclick-fra">Cheminements de carrière pour les employés autochtones</a></li>
+  <li><a href="https://www.csps-efpc.gc.ca/tools/jobaids/virtual-team-toolkit-fra.aspx" class="menuCDLOnclick-fra">Trousse d'outils pour les équipes virtuelles</a></li>
+  <li><a href="https://wiki.gccollab.ca/M365/Accueil" class="menuCDLOnclick-fra">Ressources de formation pour Microsoft (M365)</a></li>
+          <li class="slflnk"><a href="https://intranet.canada.ca/cdl-dca/index-fra.asp" class="menuCDLOnclick-fra">Développement de carrière et apprentissage - Autre</a></li>
+        </ul>
+      </li>
+      <li><a href="#mnuServices" class="item">Services et outils</a>
+        <ul class="sm list-unstyled" id="mnuServices" role="menu">
+          <li><a href="https://intranet.canada.ca/wg-tg/gf-fg/index-fra.asp" class="menuSTOnclick-fra">Établissement de rapports sur les finances</a></li>
+          <li><a href="https://intranet.canada.ca/wg-tg/pdsg-pdnd/index-fra.asp" class="menuSTOnclick-fra">Politiques, directives, normes et lignes directrices</a></li>
+          <li><a href="https://intranet.canada.ca/wg-tg/gwa-awg-fra.asp" class="menuSTOnclick-fra">RéseauGC</a></li>
+          <li><a href="https://intranet.canada.ca/wg-tg/forms-formulaires-fra.asp" class="menuSTOnclick-fra">Formulaires</a></li>
+          <li><a href="https://intranet.canada.ca/wg-tg/bsgs-avbs-fra.asp" class="menuSTOnclick-fra">Approvisionnement, surplus et paiements</a></li>
+          <li><a href="https://intranet.canada.ca/wg-tg/gc-cg/index-fra.asp" class="menuSTOnclick-fra">Communications du gouvernement</a></li>
+          <li><a href="https://intranet.canada.ca/wg-tg/go-sg/index-fra.asp" class="menuSTOnclick-fra">Surveillance du gouvernement</a></li>
+          <li><a href="https://intranet.canada.ca/wg-tg/imt-git-fra.asp" class="menuSTOnclick-fra">Gestion de l&#8217;information et des technologies</a></li>
+          <li><a href="https://intranet.canada.ca/wg-tg/bo-bi/index-fra.asp" class="menuSTOnclick-fra">Bureaux, immeubles et véhicules</a></li>
+          <li><a href="https://intranet.canada.ca/wg-tg/l-b-fra.asp" class="menuSTOnclick-fra">Bibliothèques</a></li>
+          <li class="slflnk"><a href="https://intranet.canada.ca/wg-tg/index-fra.asp" class="menuSTOnclick-fra">Services et outils – Autre</a></li>
+        </ul>
+      </li>
+      <li class="hidden-md hidden-lg"><a href="#mnuTools" class="item">OutilsGC</a>
+        <ul class="sm list-unstyled" id="mnuTools" role="menu">
+          <li> <a href="https://gcconnex.gc.ca" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gcconnex.gc.ca/index-fra.asp', title:'GCTools Banner-fr: GCconnex'})"> <span class="bold-gc">GC</span>connex</span></a> </li>
+          <li> <a href="http://www.gcpedia.gc.ca/wiki/?setlang=fr" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gcpedia.gc.ca/index-eng.asp', title:'GCTools Banner-fr: GCpedia'})"> <span class="bold-gc">GC</span>pédia</span></a> </li>
+          <li> <a href="https://gcannuaire-gcdirectory.gc.ca/fr/GCA/?pgid=002" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gcdirectory.gc.ca/index-eng.asp', title:'GCTools Banner-fr: GCdirectory'})"> <span class="bold-gc">GC</span>annuaire</span></a> </li>
+          <li> <a href="https://gccollab.ca/splash/" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gccollab.ca/splash/', title:'GCTools Banner-fr: GCcollab'})"> <span class="bold-gc">GC</span>collab</span></a> </li>
+        </ul>
+      </li>
+    </ul>
+  </div>
 </div>
 <!-- DataAjaxFragmentEnd -->
 </html>
