--- a/public/global/esdcfooter-eng.html
+++ b/public/global/esdcfooter-eng.html
@@ -1,45 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
-wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-<!-- DataAjaxFragmentStart -->
-<!-- secondary navigation if enabled -->
+<!-- The contents of this file are retrieved from https://esdc.prv/_conf/assets/en/footer/esdcfooter-eng.html -->
 <h2 class="wb-inv">About this site</h2>
 <div class="row">
-    <section class="col-sm-3">
-        <h3>About us</h3>
-        <ul class="list-unstyled">
-            <li><a href="https://edsc.prv/en/news/ministers/index.shtml">Ministers' messages</a></li>
-            <li><a href="https://edsc.prv/en/news/dm/index.shtml">DMs messages</a></li>
-            <li><a href="https://edsc.prv/en/help.shtml">Help and Important Notices</a></li>
-            <li><a href="https://edsc.prv/en/intersection/index.shtml">Intersection</a></li>
-            <li><a href="https://edsc.prv/en/news/index.shtml">News</a></li>
-        </ul>
+  <section class="col-sm-3">
+    <h3>About us</h3>
+    <ul class="list-unstyled">
+      <li><a href="https://edsc.prv/en/news/dm/index.shtml">DM messages</a></li>
+      <li><a href="https://edsc.prv/en/help.shtml">Help and important notices</a></li>
+      <li><a href="https://edsc.prv/en/intersection/index.shtml">Intersection</a></li>
+      <li><a href="https://edsc.prv/en/news/index.shtml">News</a></li>
+    </ul>
+  </section>
+  <section class="col-sm-3">
+    <h3>Contact us</h3>
+    <ul class="list-unstyled">
+      <li><a href="https://gcdirectory-gcannuaire.ssc-spc.gc.ca/en/GCD/?pgid=009">GoC employees</a></li>
+      <li><a href="https://edsc.prv/en/contact/publishing-team.shtml">Intranet publishing teams</a></li>
+    </ul>
+  </section>
+  <section class="col-sm-3">
+    <h3>Communities</h3>
+    <ul class="list-unstyled">
+      <li><a href="http://blogs-blogues.prv/SM-DM/?lang=en">Senior management blog</a></li>
+      <li><a href="https://edsc.prv/en/stay_connected/index.shtml">Stay connected</a></li>
+      <li><a href="https://edsc.prv/en/stay_connected/handbook.shtml">Web handbook</a></li>
+    </ul>
+  </section>
+  <div class="col-sm-3 col-lg-3 brdr-lft">
+    <section>
+      <h3>Feedback</h3>
+      <p><a href="https://edsc.prv/en/feedback/index.shtml"><img src="https://templates.service.gc.ca/rn/cls/wet/gcintranet/assets/feedback.png" alt="Feedback about this Web site"></a></p>
     </section>
-    <section class="col-sm-3">
-        <h3>Contact us</h3>
-        <ul class="list-unstyled">
-            <li><a href="https://sage-geds.tpsgc-pwgsc.gc.ca/cgi-bin/direct500/eng/TE?FN=index.htm">Find a GoC
-                    employee</a></li>
-            <li><a href="https://edsc.prv/en/contact/index.shtml">iService Support</a></li>
-        </ul>
-    </section>
-    <section class="col-sm-3">
-        <h3>Communities</h3>
-        <ul class="list-unstyled">
-            <li><a href="http://blogs-blogues.prv/SM-DM/?lang=en">Senior Management Blog</a></li>
-            <li><a href="https://edsc.prv/en/stay_connected/index.shtml">Stay Connected</a></li>
-            <li><a href="https://edsc.prv/en/stay_connected/handbook.shtml">Web Handbook</a></li>
-        </ul>
-    </section>
-    <div class="col-sm-3 col-lg-3 brdr-lft">
-        <section>
-            <h3>Feedback</h3>
-            <p><a href="https://edsc.prv/en/contact/index.shtml"><img
-                        src="https://templates.service.gc.ca/rn/cls/wet/gcintranet/assets/feedback.png"
-                        alt="Feedback about this Web site"></a></p>
-        </section>
-    </div>
+  </div>
 </div>
-
-</html>
