Fixing broken links

--- a/public/global/esdcmenu-eng.html
+++ b/public/global/esdcmenu-eng.html
@@ -144,7 +144,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <ul class="sm list-unstyled" id="mnuQuick" role="menu">
           <li role="presentation"><a href="https://iservice.prv/eng/finance/boardroom/index.shtml">Book a Boardroom</a></li>
           <li role="presentation"><a href="https://iservice.prv/eng/finance/amp/caam/workspace-management/index.shtml">Book a Workspace</a></li>
-          <li role="presentation"><a href="http://gcintranet.tpsgc-pwgsc.gc.ca/gc/index-eng.html">Compensation Web Applications</a></li>
+          <li role="presentation"><a href="https://gcintranet.tpsgc-pwgsc.gc.ca/gc/index-eng.html">Compensation Web Applications</a></li>
           <li role="presentation"><a href="https://iservice.prv/eng/is/security/tools_and_resources/toolkit/index.shtml">Easy Action Toolkit for Employees and Managers</a></li>
           <li role="presentation"><a href="http://forms-formulaires.prv/lc/content/EForms/en/Index.html">E-Forms</a></li>
 		  <li role="presentation"><a href="https://iservice.prv/eng/is/security/emergency_continuity/index.shtml">Emergency Management and Business Continuity</a></li>
