--- a/public/global/esdcmenu-fra.html
+++ b/public/global/esdcmenu-fra.html
@@ -141,7 +141,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <li role="presentation"> <a href="#mnuLiens" class="item mnuPadding">Liens rapides</a>
         <ul class="sm list-unstyled" id="mnuLiens" role="menu">
           <li role="presentation"><a href="https://portal-portail.tbs-sct.gc.ca/home-fra.aspx">Application de gestion du rendement</a></li>
-          <li role="presentation"><a href="http://gcintranet.tpsgc-pwgsc.gc.ca/gc/index-fra.html">Applications Web de la rémunération</a></li>
+          <li role="presentation"><a href="https://gcintranet.tpsgc-pwgsc.gc.ca/gc/index-fra.html">Applications Web de la rémunération</a></li>
           <li role="presentation"><a href="https://iservice.prv/fra/si/securite/outils_et_ressources/trousse_outils/index.shtml">Boîte à outils des mesures faciles pour les employés et les gestionnaires</a></li>
           <li role="presentation"><a href="https://iservice.prv/fra/ombuds/index.shtml">Bureau de l’Ombuds à EDSC</a></li>
           <li role="presentation"><a href="https://nscc-cnas.pwgsc-tpsgc.gc.ca/index-fra.cfm">Centre national d'appels de service</a></li>
