Fixing broken link

--- a/public/gcintranet/samples/custom-menu-en.html
+++ b/public/gcintranet/samples/custom-menu-en.html
@@ -67,7 +67,7 @@
 					"id": "link2",
 					"text": "Link 2",
 					"subLinks": [{
-						"subhref" : "https://domain.com",
+						"subhref" : "https://www.google.ca/",
 						"subtext" : "This link"
 					}]
 				},{
@@ -132,7 +132,7 @@ defTop.outerHTML = wet.builder.appTop({
         "id": "link2",
         "text": "Link 2",
         "subLinks": [{
-            "subhref" : "https://domain.com",
+            "subhref" : "https://www.google.ca/",
             "subtext" : "This link"
         }]
     },{
